--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -15,8 +15,19 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 1rem;
+  margin-left: 0.6rem;
 }
 
 .sidebar__li {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
+}
+
+.icons {
+  font-size: 1.6rem;
+  padding-right: 0.6rem;
+}
+
+.sidebar__search {
+  margin-top: 0.2rem;
+  width: 200px;
 }
