--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,7 +1,7 @@
 .sidebar__container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   border: 1px solid #fff;
   border-radius: 10px;
   width: 10%;
@@ -15,7 +15,8 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 1rem;
-  margin-left: 0.6rem;
+  margin-top: 1.4rem;
+  margin-left: 1rem;
 }
 
 .sidebar__li {
