--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #fff;
+  padding-top: 1.2rem;
 }
 
 .nav__links {
