--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,11 +1,11 @@
 .sidebar__container {
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
   border: 1px solid #fff;
   border-radius: 10px;
   width: 10%;
-  height: 30%;
+  height: 25%;
   position: fixed;
   margin-top: 3rem;
 }
@@ -14,9 +14,9 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  gap: 1rem;
-  margin-top: 1.4rem;
-  margin-left: 1rem;
+  gap: 1.2rem;
+
+  margin-left: 1.2rem;
 }
 
 .sidebar__li {
@@ -26,6 +26,7 @@
 .icons {
   font-size: 1.6rem;
   padding-right: 0.6rem;
+  color: #6f35fc;
 }
 
 .sidebar__search {
