--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -1,6 +1,5 @@
 .card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
+  border-bottom: 1px solid #aaa;
   margin-bottom: 20px;
   padding: 1rem;
   width: 500px;
