edited login component

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -11,7 +11,17 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 4rem;
+  border: 1px solid #fff;
+  border-radius: 10px;
+  padding: 3rem;
+  width: 500px;
+}
+
+.form {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .login__header {
