--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,10 @@ button {
 button:hover {
   opacity: 0.8;
 }
+
+@media screen and (min-width: 800px) and (max-width: 1050px) {
+  body {
+    max-width: 1000px;
+    margin: auto;
+  }
+}
