--- a/src/components/Post/AddPost.module.css
+++ b/src/components/Post/AddPost.module.css
@@ -28,3 +28,14 @@
   border: none;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 480px) {
+  .post__form {
+    width: 300px;
+  }
+
+  .add__post__button {
+    margin-left: 0;
+    margin-top: 0.6rem;
+  }
+}
