--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,10 @@ button:hover {
     margin: auto;
   }
 }
+
+@media screen and (max-width: 480px) {
+  body {
+    width: 350px;
+    margin: auto;
+  }
+}
