--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -34,7 +34,7 @@
   width: 200px;
 }
 
-@media screen and (min-width: 1050px) {
+@media screen and (max-width: 2200px) {
   .sidebar__container {
     width: 18%;
     height: 25%;
