--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -34,6 +34,10 @@ a {
 }
 
 @media screen and (max-width: 480px) {
+  .navbar {
+    padding-bottom: 0.4rem;
+  }
+
   .nav__header {
     font-size: 2rem;
   }
